--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "boom": "^7.1.1",
     "bunyan": "^1.8.12",
     "bunyan-format": "^0.2.1",
+    "cheerio": "^1.0.0-rc.2",
     "eslint": "^4.18.1",
+    "html-entities": "^1.2.1",
+    "jsonwebtoken": "^8.3.0",
     "koa": "^2.5.0",
     "koa-joi-router": "^5.1.0",
     "koa-logger": "^3.1.0",
     "koa-router": "^7.4.0",
     "moment": "^2.20.1",
     "mongoose": "^5.0.6",
-    "nodemon": "^1.15.0"
+    "nodemon": "^1.15.0",
+    "request": "^2.88.0"
   }
 }
