--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bunyan": "^1.8.12",
     "bunyan-format": "^0.2.1",
     "cheerio": "^1.0.0-rc.2",
+    "cos-nodejs-sdk-v5": "^2.4.10",
     "eslint": "^4.18.1",
     "html-entities": "^1.2.1",
     "jsonwebtoken": "^8.3.0",
