feat: 添加npm命令dev，和start一样

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "koa service server",
   "main": "index.js",
   "scripts": {
+    "dev": "eslint . && nodemon main",
     "start": "eslint . && nodemon main",
     "lint": "eslint ."
   },
